fixed covering bug

--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ body {
 }
 
 #attempts {
-    display: none;
+    height: 2rem;
     position: absolute;
-    top: 0;
-    margin: 1rem auto;
+    left: 2rem;
+    top: calc(50% - 1rem);
     color: rebeccapurple;
     font-weight: bold;
     font-size: 3rem;
@@ -42,8 +42,8 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 2.4rem;
-    height: 50px;
-    width: 200px;
+    height: 5rem;
+    width: 20rem;
     margin: 1em 0;
     border: 3px solid black;
     border-radius: 1rem;
@@ -62,7 +62,7 @@ body {
 }
 
 .card {
-    min-width: 8.5rem;
+    min-width: 6.5rem;
     max-width: 10rem;
     min-height: 8.5rem;
     max-height: 10rem;
